--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,31 +1,40 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "declaration": true,
-        "experimentalDecorators": true,
-        "strict": true,
-        "module": "es2015",
-        "moduleResolution": "node",
-        "outDir": "dist",
         "rootDir": ".",
-        "sourceMap": true,
-        "inlineSources": true,
+        "baseUrl": ".",
+        "paths": {
+            "@angular/*": [
+                "../node_modules/@angular/*"
+            ]
+        },
+        "outDir": "../dist",
+        "declaration": true,
+        "strict": true,
+        "moduleResolution": "node",
+        "module": "es2015",
         "target": "es2015",
-        "skipLibCheck": true,
         "lib": [
             "es2015",
             "dom"
-        ]
+        ],
+        "skipLibCheck": true,
+        "types": [
+            "node"
+        ],
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "sourceMap": true,
+        "inlineSources": true
     },
     "files": [
         "public_api.ts",
-        "node_modules/zone.js/dist/zone.js.d.ts"
+        "../node_modules/zone.js/dist/zone.js.d.ts"
     ],
     "angularCompilerOptions": {
         "skipTemplateCodegen": true,
         "annotateForClosureCompiler": true,
         "strictMetadataEmit": true,
-        "flatModuleOutFile": "index.js",
-        "flatModuleId": "ngx-stripe"
+        "flatModuleOutFile": "ngx-stripe.js",
+        "flatModuleId": "@nomadreservations/ngx-stripe"
     }
 }
