--- a/package.json
+++ b/package.json
@@ -1,28 +1,57 @@
 {
-    "name": "ngx-stripe",
-    "version": "0.2.3",
-    "description": "Angular 2+ wrapper for StripeJS",
+    "name": "@nomadreservations/ngx-stripe",
+    "version": "0.1.0",
+    "description": "@angular wrapper for StripeJS",
     "main": "./bundles/ngx-stripe.umd.js",
-    "module": "./modules/ngx-stripe.es5.js",
-    "es2015": "./modules/ngx-stripe.js",
+    "module": "./esm5/ngx-stripe.js",
+    "es2015": "./esm2015/ngx-stripe.js",
     "scripts": {
-        "build": "node build.js",
+        "clean:dist": "rimraf dist",
+        "build": "npm run clean:dist && node build.js",
+        "build:watch": "nodemon -e js,ts,json,html,scss --ignore dist --ignore documentation --ignore demo --ignore build -x npm run build",
+        "build:release": "npm-run-all -s doctoc build compodoc",
+        "publish:dev": "yalc publish ./dist",
+        "build:dev": "run-s build publish:dev",
+        "build:watch:dev": "nodemon -e js,ts,json,html,scss --ignore dist --ignore documentation --ignore demo --ignore build -x run-s build:dev",
         "test": "karma start",
+        "pack-and-build": "npm-run-all -s build pack-lib",
+        "pack:watch": "nodemon -e js,ts,json --ignore dist --ignore documentation --ignore demo --ignore build -x npm run pack-and-build",
         "pack-lib": "npm pack ./dist",
-        "publish-lib": "npm publish ./dist",
+        "publish-lib": "npm publish ./dist --registry=https://registry.npmjs.org/",
+        "publish-lib:next": "npm publish --tag next ./dist --registry=https://registry.npmjs.org/",
+        "commit": "git cz -a",
+        "release": "release-it",
+        "release:major": "npm run release -- major -n",
+        "release:minor": "npm run release -- minor -n",
+        "release:patch": "npm run release -- patch -n",
         "compodoc": "compodoc -p tsconfig.json",
-        "compodoc-serve": "compodoc -s"
+        "compodoc:serve": "compodoc -p tsconfig.json -sw",
+        "compodoc:watch": "compodoc -p tsconfig.json -w",
+        "docs": "npm-run-all -s compodoc:serve",
+        "docs:watch": "npm-run-all -p compodoc:serve compodoc:watch",
+        "docs:publish": "bash deploy-docs.sh",
+        "doctoc": "doctoc README.md --maxlevel 3",
+        "watch": "npm-run-all -p build:watch docs",
+        "postversion": "git push && git push --tags",
+        "demo": "npm-run-all -s demo:install demo:serve",
+        "demo:watch": "cd demo && npm run start",
+        "demo:serve": "run-p demo:watch",
+        "demo:install": "cd demo && yarn install",
+        "demo:aot:yalc": "run-s demo:yalc && cd demo && ng build --prod",
+        "demo:watch:aot:yalc": "nodemon -e ts -w src -w demo -w public_api.ts -x run-s demo:aot:yalc",
+        "demo:watch:yalc": "nodemon -e ts,scss,html -w src -w public_api.ts -d 1 -x run-s demo:yalc",
+        "demo:yalc": "run-s build && yalc publish dist && cd demo && yalc link @nomadreservations/ngx-stripe"
     },
-    "typings": "./index.d.ts",
+    "typings": "./ngx-stripe.d.ts",
     "author": "",
     "repository": {
         "type": "git",
-        "url": "https://github.com/richnologies/ngx-stripe.git"
+        "url": "https://github.com/nomadreservations/ngx-stripe.git"
     },
     "bugs": {
-        "url": "https://github.com/richnologies/ngx-stripe/issues"
+        "url": "https://github.com/nomadreservations/ngx-stripe/issues"
     },
-    "homepage": "https://github.com/richnologies/ngx-stripe",
+    "homepage": "https://github.com/nomadreservations/ngx-stripe",
     "keywords": [
         "angular",
         "javascript",
@@ -30,47 +59,63 @@
     ],
     "license": "MIT",
     "peerDependencies": {
-        "@angular/common": ">= 4.1.0",
-        "@angular/core": ">= 4.1.0"
+        "@angular/common": ">= 5.0.0",
+        "@angular/core": ">= 5.0.0"
     },
     "devDependencies": {
-        "@angular/animations": "4.1.0",
-        "@angular/common": "4.1.0",
-        "@angular/compiler": "4.1.0",
-        "@angular/compiler-cli": "4.1.0",
-        "@angular/core": "4.1.0",
-        "@angular/platform-browser": "4.1.0",
-        "@angular/platform-browser-dynamic": "4.1.0",
-        "@angular/platform-server": "4.1.0",
-        "@compodoc/compodoc": "1.0.0-beta.10",
-        "@types/jasmine": "2.5.52",
-        "@types/node": "8.0.1",
-        "chalk": "1.1.3",
-        "codelyzer": "3.1.1",
-        "core-js": "2.4.1",
-        "jasmine-core": "2.6.4",
-        "karma": "1.7.0",
-        "karma-chrome-launcher": "2.1.1",
-        "karma-jasmine": "1.1.0",
+        "@angular/animations": "5.2.0",
+        "@angular/common": "5.2.0",
+        "@angular/compiler": "5.2.0",
+        "@angular/compiler-cli": "5.2.0",
+        "@angular/core": "5.2.0",
+        "@angular/platform-browser": "5.2.0",
+        "@angular/platform-browser-dynamic": "5.2.0",
+        "@angular/platform-server": "5.2.0",
+        "@compodoc/compodoc": "1.0.5",
+        "@types/jasmine": "2.8.4",
+        "@types/node": "9.3.0",
+        "angular2-inline-template-style": "^1.3.0",
+        "chalk": "2.3.0",
+        "codelyzer": "4.0.2",
+        "core-js": "2.5.3",
+        "cpx": "^1.5.0",
+        "cz-conventional-changelog": "^2.1.0",
+        "jasmine-core": "2.8.0",
+        "karma": "2.0.0",
+        "karma-chrome-launcher": "2.2.0",
+        "karma-jasmine": "1.1.1",
         "karma-sourcemap-loader": "0.3.7",
-        "karma-spec-reporter": "0.0.31",
-        "karma-webpack": "2.0.3",
-        "reflect-metadata": "0.1.10",
-        "rollup": "0.43.0",
-        "rollup-plugin-node-resolve": "3.0.0",
-        "rxjs": "5.4.1",
-        "shelljs": "0.7.8",
+        "karma-spec-reporter": "0.0.32",
+        "karma-webpack": "2.0.9",
+        "npm-run-all": "^4.1.2",
+        "reflect-metadata": "0.1.12",
+        "release-it": "^5.2.0",
+        "replace": "^0.3.0",
+        "rimraf": "^2.6.2",
+        "rollup": "0.54.1",
+        "rollup-globals-regex": "^0.0.3",
+        "rollup-plugin-commonjs": "^8.2.6",
+        "rollup-plugin-json": "^2.3.0",
+        "rollup-plugin-license": "^0.5.0",
+        "rollup-plugin-local-resolve": "^1.0.7",
+        "rollup-plugin-node-resolve": "3.0.2",
+        "rollup-plugin-sourcemaps": "^0.4.2",
+        "rxjs": "5.5.6",
+        "shelljs": "0.8.0",
         "sorcery": "0.10.0",
-        "source-map-loader": "0.2.1",
-        "ts-loader": "2.1.0",
-        "tslint": "5.4.3",
-        "typescript": "2.3.4",
-        "uglify-js": "2.8.29",
-        "webpack": "3.0.0",
-        "yargs": "8.0.2",
-        "zone.js": "0.8.12"
+        "source-map-loader": "0.2.3",
+        "ts-loader": "3.2.0",
+        "tslint": "5.9.1",
+        "typescript": "~2.5.3",
+        "uglify-js": "3.3.7",
+        "webpack": "3.10.0",
+        "yalc": "^1.0.0-pre.16",
+        "yargs": "10.1.1",
+        "zone.js": "0.8.20"
     },
-    "prettier": {
-        "singleQuote": true
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
