--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
+        "baseUrl": "./",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "strict": true,
@@ -20,6 +20,7 @@
         ]
     },
     "exclude": [
+        "demo/**/*.ts",
         "node_modules"
     ]
 }
