--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nomadreservations/ngx-stripe",
-    "version": "0.1.0",
+    "version": "1.0.0-rc.0",
     "description": "@angular wrapper for StripeJS",
     "main": "./bundles/ngx-stripe.umd.js",
     "module": "./esm5/ngx-stripe.js",
@@ -80,6 +80,7 @@
         "core-js": "2.5.3",
         "cpx": "^1.5.0",
         "cz-conventional-changelog": "^2.1.0",
+        "doctoc": "^1.3.0",
         "jasmine-core": "2.8.0",
         "karma": "2.0.0",
         "karma-chrome-launcher": "2.2.0",
