--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nomadreservations/ngx-stripe",
-    "version": "1.0.0-rc.1",
+    "version": "1.0.0",
     "description": "@angular wrapper for StripeJS",
     "main": "./bundles/ngx-stripe.umd.js",
     "module": "./esm5/ngx-stripe.js",
