--- a/package.json
+++ b/package.json
@@ -58,19 +58,16 @@
         "typescript"
     ],
     "license": "MIT",
-    "peerDependencies": {
-        "@angular/common": ">= 5.0.0",
-        "@angular/core": ">= 5.0.0"
-    },
+    "peerDependencies": {},
     "devDependencies": {
-        "@angular/animations": "5.2.0",
-        "@angular/common": "5.2.0",
-        "@angular/compiler": "5.2.0",
-        "@angular/compiler-cli": "5.2.0",
-        "@angular/core": "5.2.0",
-        "@angular/platform-browser": "5.2.0",
-        "@angular/platform-browser-dynamic": "5.2.0",
-        "@angular/platform-server": "5.2.0",
+        "@angular/animations": "6.1.7",
+        "@angular/common": "6.1.7",
+        "@angular/compiler": "6.1.7",
+        "@angular/compiler-cli": "6.1.7",
+        "@angular/core": "6.1.7",
+        "@angular/platform-browser": "6.1.7",
+        "@angular/platform-browser-dynamic": "6.1.7",
+        "@angular/platform-server": "6.1.7",
         "@compodoc/compodoc": "1.0.5",
         "@types/jasmine": "2.8.4",
         "@types/node": "9.3.0",
@@ -101,18 +98,18 @@
         "rollup-plugin-local-resolve": "^1.0.7",
         "rollup-plugin-node-resolve": "3.0.2",
         "rollup-plugin-sourcemaps": "^0.4.2",
-        "rxjs": "5.5.6",
+        "rxjs": "6.3.2",
         "shelljs": "0.8.0",
         "sorcery": "0.10.0",
         "source-map-loader": "0.2.3",
         "ts-loader": "3.2.0",
         "tslint": "5.9.1",
-        "typescript": "~2.5.3",
+        "typescript": "~2.9.2",
         "uglify-js": "3.3.7",
         "webpack": "3.10.0",
         "yalc": "^1.0.0-pre.16",
         "yargs": "10.1.1",
-        "zone.js": "0.8.20"
+        "zone.js": "0.8.26"
     },
     "config": {
         "commitizen": {
