--- a/package.json
+++ b/package.json
@@ -1,119 +1,86 @@
 {
-    "name": "@nomadreservations/ngx-stripe",
-    "version": "1.1.0",
-    "description": "@angular wrapper for StripeJS",
-    "main": "./bundles/ngx-stripe.umd.js",
-    "module": "./esm5/ngx-stripe.js",
-    "es2015": "./esm2015/ngx-stripe.js",
-    "scripts": {
-        "clean:dist": "rimraf dist",
-        "build": "npm run clean:dist && node build.js",
-        "build:watch": "nodemon -e js,ts,json,html,scss --ignore dist --ignore documentation --ignore demo --ignore build -x npm run build",
-        "build:release": "npm-run-all -s doctoc build compodoc",
-        "publish:dev": "yalc publish ./dist",
-        "build:dev": "run-s build publish:dev",
-        "build:watch:dev": "nodemon -e js,ts,json,html,scss --ignore dist --ignore documentation --ignore demo --ignore build -x run-s build:dev",
-        "test": "karma start",
-        "pack-and-build": "npm-run-all -s build pack-lib",
-        "pack:watch": "nodemon -e js,ts,json --ignore dist --ignore documentation --ignore demo --ignore build -x npm run pack-and-build",
-        "pack-lib": "npm pack ./dist",
-        "publish-lib": "npm publish ./dist --registry=https://registry.npmjs.org/",
-        "publish-lib:next": "npm publish --tag next ./dist --registry=https://registry.npmjs.org/",
-        "commit": "git cz -a",
-        "release": "release-it",
-        "release:major": "npm run release -- major -n",
-        "release:minor": "npm run release -- minor -n",
-        "release:patch": "npm run release -- patch -n",
-        "compodoc": "compodoc -p tsconfig.json",
-        "compodoc:serve": "compodoc -p tsconfig.json -sw",
-        "compodoc:watch": "compodoc -p tsconfig.json -w",
-        "docs": "npm-run-all -s compodoc:serve",
-        "docs:watch": "npm-run-all -p compodoc:serve compodoc:watch",
-        "docs:publish": "run-s demo:aot:yalc && bash deploy-docs.sh",
-        "doctoc": "doctoc README.md --maxlevel 3",
-        "watch": "npm-run-all -p build:watch docs",
-        "postversion": "git push && git push --tags",
-        "demo": "npm-run-all -s demo:install demo:serve",
-        "demo:watch": "cd demo && npm run start",
-        "demo:serve": "run-p demo:watch",
-        "demo:install": "cd demo && yarn install",
-        "demo:aot:yalc": "run-s demo:yalc && cd demo && ng build --prod",
-        "demo:watch:aot:yalc": "nodemon -e ts -w src -w demo -w public_api.ts -x run-s demo:aot:yalc",
-        "demo:watch:yalc": "nodemon -e ts,scss,html -w src -w public_api.ts -d 1 -x run-s demo:yalc",
-        "demo:yalc": "run-s build && yalc publish dist && cd demo && yalc link @nomadreservations/ngx-stripe"
-    },
-    "typings": "./ngx-stripe.d.ts",
-    "author": "",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/nomadreservations/ngx-stripe.git"
-    },
-    "bugs": {
-        "url": "https://github.com/nomadreservations/ngx-stripe/issues"
-    },
-    "homepage": "https://github.com/nomadreservations/ngx-stripe",
-    "keywords": [
-        "angular",
-        "javascript",
-        "typescript"
-    ],
-    "license": "MIT",
-    "peerDependencies": {},
-    "devDependencies": {
-        "@angular/animations": "6.1.7",
-        "@angular/common": "6.1.7",
-        "@angular/compiler": "6.1.7",
-        "@angular/compiler-cli": "6.1.7",
-        "@angular/core": "6.1.7",
-        "@angular/platform-browser": "6.1.7",
-        "@angular/platform-browser-dynamic": "6.1.7",
-        "@angular/platform-server": "6.1.7",
-        "@compodoc/compodoc": "1.0.5",
-        "@types/jasmine": "2.8.4",
-        "@types/node": "9.3.0",
-        "angular2-inline-template-style": "^1.3.0",
-        "chalk": "2.3.0",
-        "codelyzer": "4.0.2",
-        "core-js": "2.5.3",
-        "cpx": "^1.5.0",
-        "cz-conventional-changelog": "^2.1.0",
-        "doctoc": "^1.3.0",
-        "jasmine-core": "2.8.0",
-        "karma": "2.0.0",
-        "karma-chrome-launcher": "2.2.0",
-        "karma-jasmine": "1.1.1",
-        "karma-sourcemap-loader": "0.3.7",
-        "karma-spec-reporter": "0.0.32",
-        "karma-webpack": "2.0.9",
-        "npm-run-all": "^4.1.2",
-        "reflect-metadata": "0.1.12",
-        "release-it": "^5.2.0",
-        "replace": "^0.3.0",
-        "rimraf": "^2.6.2",
-        "rollup": "0.54.1",
-        "rollup-globals-regex": "^0.0.3",
-        "rollup-plugin-commonjs": "^8.2.6",
-        "rollup-plugin-json": "^2.3.0",
-        "rollup-plugin-license": "^0.5.0",
-        "rollup-plugin-local-resolve": "^1.0.7",
-        "rollup-plugin-node-resolve": "3.0.2",
-        "rollup-plugin-sourcemaps": "^0.4.2",
-        "rxjs": "6.3.2",
-        "shelljs": "0.8.0",
-        "sorcery": "0.10.0",
-        "source-map-loader": "0.2.3",
-        "ts-loader": "3.2.0",
-        "tslint": "5.9.1",
-        "typescript": "~2.9.2",
-        "uglify-js": "3.3.7",
-        "webpack": "3.10.0",
-        "yalc": "^1.0.0-pre.16",
-        "yargs": "10.1.1",
-        "zone.js": "0.8.26"
-    },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
-    }
+  "name": "@nomadreservations/ngx-stripe",
+  "version": "1.1.0",
+  "description": "@angular wrapper for StripeJS",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nomadreservations/ngx-stripe.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nomadreservations/ngx-stripe/issues"
+  },
+  "homepage": "https://github.com/nomadreservations/ngx-stripe",
+  "keywords": [
+    "angular",
+    "javascript",
+    "typescript"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "release": "release-it",
+    "release:major": "npm run release -- major -n",
+    "release:minor": "npm run release -- minor -n",
+    "release:patch": "npm run release -- patch -n",
+    "compodoc": "compodoc -p tsconfig.json",
+    "compodoc:serve": "compodoc -p tsconfig.json -sw",
+    "compodoc:watch": "compodoc -p tsconfig.json -w",
+    "docs": "npm-run-all -s compodoc:serve",
+    "docs:watch": "npm-run-all -p compodoc:serve compodoc:watch",
+    "docs:publish": "run-s demo:aot:yalc && bash deploy-docs.sh",
+    "doctoc": "doctoc README.md --maxlevel 3"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~7.0.0",
+    "@angular/cdk": "~7.1.0",
+    "@angular/common": "~7.0.0",
+    "@angular/compiler": "~7.0.0",
+    "@angular/core": "~7.0.0",
+    "@angular/forms": "~7.0.0",
+    "@angular/http": "~7.0.0",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "~7.0.0",
+    "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/router": "~7.0.0",
+    "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "mdi": "^2.2.43",
+    "release-it": "^8.2.0",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-ng-packagr": "~0.10.0",
+    "@angular/cli": "~7.0.5",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
+    "@compodoc/compodoc": "^1.1.7",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "doctoc": "^1.4.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
+    "npm-run-all": "^4.1.5",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
+  }
 }
