--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "@nomadreservations/ngx-stripe",
-  "version": "1.1.0",
+  "version": "1.1.0-beta.0",
   "description": "@angular wrapper for StripeJS",
   "repository": {
     "type": "git",
