--- a/.release-it.json
+++ b/.release-it.json
@@ -1,8 +1,12 @@
 {
   "non-interactive": true,
-  "buildCommand": "npm run build:release",
-  "afterReleaseCommand": "echo Successfully released ${version} to ${dist.repo}.",
-  "changelogCommand": "(tmpfile=`mktemp` && { git-release-notes [REV_RANGE] markdown | cat - CHANGELOG.md > $tmpfile && mv $tmpfile CHANGELOG.md; })",
+  "hooks": {
+    "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}.",
+    "after:bump": [
+      "npm run build:release",
+      "npx auto-changelog -p"
+    ]
+  },
   "npm": {
     "publishPath": "./dist/ngx-stripe"
   },
