--- a/package.json
+++ b/package.json
@@ -37,33 +37,31 @@
     "docs:publish": "run-s demo:aot:yalc && bash deploy-docs.sh",
     "doctoc": "doctoc README.md --maxlevel 3"
   },
-  "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0"
-  },
+  "peerDependencies": {},
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/animations": "~8.2.9",
     "@angular/cdk": "~7.1.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
+    "@angular/common": "~8.2.9",
+    "@angular/compiler": "~8.2.9",
+    "@angular/core": "~8.2.9",
+    "@angular/forms": "~8.2.9",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/platform-browser": "~8.2.9",
+    "@angular/platform-browser-dynamic": "~8.2.9",
+    "@angular/router": "~8.2.9",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "mdi": "^2.2.43",
     "release-it": "^8.2.0",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
+    "rxjs": "~6.5.3",
+    "zone.js": "~0.9.1",
     "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular/compiler-cli": "~8.2.9",
+    "@angular/language-service": "~8.2.9",
     "@compodoc/compodoc": "^1.1.10",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
@@ -86,7 +84,7 @@
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.5.3"
   },
   "ngPackage": {
     "dest": "dist/ngx-stripe",
