--- a/package.json
+++ b/package.json
@@ -44,50 +44,49 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "~0.803.8",
     "@angular/animations": "~8.2.9",
-    "@angular/cdk": "~7.1.0",
+    "@angular/cdk": "^8.2.2",
+    "@angular/cli": "~8.3.8",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
+    "@angular/compiler-cli": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "^7.1.0",
+    "@angular/language-service": "~8.2.9",
+    "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
-    "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
-    "mdi": "^2.2.43",
-    "release-it": "^8.2.0",
-    "rxjs": "~6.5.3",
-    "zone.js": "~0.9.1",
-    "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "~8.2.9",
-    "@angular/language-service": "~8.2.9",
     "@compodoc/compodoc": "^1.1.10",
-    "@types/jasmine": "~3.4.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.7.1",
-    "codelyzer": "~4.5.0",
+    "@types/jasmine": "~3.4.2",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.7.11",
+    "auto-changelog": "^1.16.1",
+    "codelyzer": "~5.1.2",
+    "core-js": "^3.2.1",
     "doctoc": "^1.4.0",
     "fstream": "^1.0.12",
-    "jasmine-core": "~3.4.0",
+    "hammerjs": "^2.0.8",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "js-yaml": "^3.13.1",
-    "karma": "~4.2.0",
-    "karma-chrome-launcher": "~3.0.0",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.4.3",
+    "mdi": "^2.2.43",
+    "ng-packagr": "^5.5.1",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.2",
-    "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "release-it": "^12.4.2",
+    "rxjs": "~6.5.3",
+    "ts-node": "~8.4.1",
+    "tslib": "^1.10.0",
+    "tslint": "~5.20.0",
+    "typescript": "~3.5.3",
+    "zone.js": "~0.10.2"
   },
   "ngPackage": {
     "dest": "dist/ngx-stripe",
