--- a/package.json
+++ b/package.json
@@ -37,32 +37,31 @@
     "docs:publish": "run-s demo:aot:yalc && bash deploy-docs.sh",
     "doctoc": "doctoc README.md --maxlevel 3"
   },
-  "peerDependencies": {
-    "@angular/common": "~8.2.9",
-    "@angular/core": "~8.2.9"
-  },
-  "dependencies": {},
+  "peerDependencies": {},
+  "dependencies": {
+    "tslib": "^1.10.0"
+},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.8",
-    "@angular/animations": "~8.2.9",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/animations": "~9.1.13",
     "@angular/cdk": "^9.2.4",
-    "@angular/cli": "~8.3.8",
-    "@angular/common": "~8.2.9",
-    "@angular/compiler": "~8.2.9",
-    "@angular/compiler-cli": "~8.2.9",
-    "@angular/core": "~8.2.9",
-    "@angular/forms": "~8.2.9",
-    "@angular/language-service": "~8.2.9",
+    "@angular/cli": "~9.1.15",
+    "@angular/common": "~9.1.13",
+    "@angular/compiler": "~9.1.13",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/core": "~9.1.13",
+    "@angular/forms": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~8.2.9",
-    "@angular/platform-browser-dynamic": "~8.2.9",
-    "@angular/router": "~8.2.9",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/router": "~9.1.13",
     "@compodoc/compodoc": "^1.1.10",
     "@types/jasmine": "~3.4.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.7.11",
+    "@types/node": "^12.11.1",
     "auto-changelog": "^1.16.1",
-    "codelyzer": "~5.1.2",
+    "codelyzer": "^5.1.2",
     "core-js": "^3.2.1",
     "doctoc": "^1.4.0",
     "fstream": "^1.0.12",
@@ -76,15 +75,14 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "mdi": "^2.2.43",
-    "ng-packagr": "^5.5.1",
+    "ng-packagr": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.2",
     "release-it": "^12.4.2",
     "rxjs": "~6.5.3",
     "ts-node": "~8.4.1",
-    "tslib": "^1.10.0",
     "tslint": "~5.20.0",
-    "typescript": "~3.5.3",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "ngPackage": {
