--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
     "doctoc": "doctoc README.md --maxlevel 3"
   },
   "peerDependencies": {},
-  "dependencies": {
-    "tslib": "^2.0.0"
-  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.3",
     "@angular/animations": "~13.1.2",
@@ -57,6 +54,7 @@
     "@angular/platform-browser-dynamic": "~13.1.2",
     "@angular/router": "~13.1.2",
     "@compodoc/compodoc": "^1.1.10",
+    "@mdi/font": "^6.5.95",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
@@ -74,13 +72,13 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "mdi": "^2.2.43",
     "ng-packagr": "^13.1.3",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "release-it": "^12.4.2",
-    "rxjs": "~6.5.3",
+    "rxjs": "^7.5.2",
     "ts-node": "~8.4.1",
+    "tslib": "^2.3.1",
     "tslint": "~6.1.0",
     "typescript": "~4.5.4",
     "zone.js": "~0.11.4"
