--- a/projects/ngx-stripe/package.json
+++ b/projects/ngx-stripe/package.json
@@ -15,12 +15,5 @@
       "javascript",
       "typescript"
   ],
-  "license": "MIT",
-  "dependencies": {
-    "tslib": "^2.0.0"
-  },
-  "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0"
-  }
+  "license": "MIT"
 }
